--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "prettier": "^1.19.1"
   },
   "proxy": "http://localhost:5000"
 }
